tests/baselines/reference/stringLiteralsWithEqualityChecks04.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks04.ts(16,5): error TS2365: Operator '==' cannot be applied to types '"foo"' and '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks04.ts(19,5): error TS2365: Operator '==' cannot be applied to types '"foo" | Refrigerator' and '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks04.ts(20,5): error TS2365: Operator '==' cannot be applied to types '"bar"' and '"foo" | Refrigerator'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks04.ts(25,5): error TS2365: Operator '!=' cannot be applied to types '"foo"' and '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks04.ts(28,5): error TS2365: Operator '!=' cannot be applied to types '"foo" | Refrigerator' and '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks04.ts(29,5): error TS2365: Operator '!=' cannot be applied to types '"bar"' and '"foo" | Refrigerator'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks04.ts (6 errors) ====
    interface Runnable {
        isRunning: boolean;
    }
    
    interface Refrigerator extends Runnable {
        makesFoodGoBrrr: boolean;
    }
    
    let x: string;
    let y: "foo" | Refrigerator;
    
    let b: boolean;
    b = x == y;
    b = "foo" == y
    b = y == "foo";
    b = "foo" == "bar";
        ~~~~~~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types '"foo"' and '"bar"'.
    b = "bar" == x;
    b = x == "bar";
    b = y == "bar";
        ~~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types '"foo" | Refrigerator' and '"bar"'.
    b = "bar" == y;
        ~~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types '"bar"' and '"foo" | Refrigerator'.
    
    b = x != y;
    b = "foo" != y
    b = y != "foo";
    b = "foo" != "bar";
        ~~~~~~~~~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types '"foo"' and '"bar"'.
    b = "bar" != x;
    b = x != "bar";
    b = y != "bar";
        ~~~~~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types '"foo" | Refrigerator' and '"bar"'.
    b = "bar" != y;
        ~~~~~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types '"bar"' and '"foo" | Refrigerator'.
    